fixed myprofile feature;

--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Event/Create.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Event/Create.cshtml
@@ -97,6 +97,7 @@
         <br>
         <a href="myevents.html"><button class="submitButtons" type="reset">Cancel</button></a>
         <button class="submitButtons" type="submit">Submit</button>
+        </div>
         }
 
 
