--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ManageLogins.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ManageLogins.cshtml
@@ -99,7 +99,7 @@
                 <button class="submitButtons" type="submit">Update</button>
             </div>
         }
-
+        </div>
         <script src="scripts/backgroundChange.js"></script>
 
 
