--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ChangePassword.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ChangePassword.cshtml
@@ -67,7 +67,7 @@
         </style>
         <ul class="navUL">
             <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
-            <li class="navLi"><a href="ChangePassword.html">Change password</a></li>
+            <li class="navLi">@Html.ActionLink("Change Password", "ChangePassword", "Manage", routeValues: null, htmlAttributes: new { id = "changePasswordLink" })</li>
             <li class="navLi"><a href="ChangeImage.html">Change image</a></li>
         </ul>
     </div>
@@ -105,7 +105,7 @@
                 <button class="submitButtons" type="submit">Update</button>
             </div>
         }
-
+        </div>
         <script src="scripts/backgroundChange.js"></script>
 
 
