--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Account/Login.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Account/Login.cshtml
@@ -18,7 +18,7 @@
         <ul class="profile-wrapper">
             <li>
                 <div class="profile">
-                    <a href="#" class="name">Register/Login</a>
+                    @Html.ActionLink("Register/Login", "Index", "Home", new { area = "" }, new { @class = "name" })
                     <ul class="menu">
                         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
                         <li>@Html.ActionLink("Login", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
@@ -31,8 +31,8 @@
 
     <div id="contents">
         @Html.ActionLink(" ", "Entertainment", "Comunities", null, new { @id = "button1", @class = "button button1" })
-        @Html.ActionLink(" ", "Comunities", null, new { @id = "button3", @class = "button button3" })
-        @Html.ActionLink(" ", "Comunities", null, new { @id = "button2", @class = "button button2" })
+        @Html.ActionLink(" ", "MutualHelp", "Comunities", null, new { @id = "button3", @class = "button button3" })
+        @Html.ActionLink(" ", "Science", "Comunities", null, new { @id = "button2", @class = "button button2" })
     </div>
 
     <footer class="the_footer">
