added ChangeUserName but couldn't fix the functionality; added some links more;

--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Account/Login.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Account/Login.cshtml
@@ -11,8 +11,6 @@
 </head>
 
 <body>
-    @*@using (Html.BeginForm("Register", "Account", FormMethod.Post))
-        {*@
     @Html.AntiForgeryToken()
     <div id="profile_div">
         <ul class="profile-wrapper">
@@ -27,7 +25,6 @@
             </li>
         </ul>
     </div>
-
 
     <div id="contents">
         @Html.ActionLink(" ", "Entertainment", "Comunities", null, new { @id = "button1", @class = "button button1" })
@@ -48,24 +45,17 @@
                     <h1>
                         <span>@Html.ValidationSummary("")</span>
                     </h1>
-
-
                     <div id="otherRows">
                         @Html.TextBoxFor(m => m.Email, new { @class = "username", @title = "Please enter a valid email address", @placeholder = "Please enter a valid email address" })
                         @Html.PasswordFor(m => m.Password, new { @class = "password", @title = "Enter password", @placeholder = "Enter password" })
                         <input type="submit" value="Log in">
                     </div>
+                    @Html.CheckBoxFor(m => m.RememberMe)
+                    @Html.LabelFor(m => m.RememberMe)
                 </form>
             </div>
         </div>
-
-
     }
-
-
-
-
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/coolchange")
     @*// @RenderSection("scripts", required: false)*@
