--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ChangePassword.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Manage/ChangePassword.cshtml
@@ -66,7 +66,7 @@
             }
         </style>
         <ul class="navUL">
-            <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
+            <li class="navLi">@Html.ActionLink("Change Username", "ChangeUsername", "Manage", routeValues: null, htmlAttributes: new { id = "changeUsernameLink" })</li>
             <li class="navLi">@Html.ActionLink("Change Password", "ChangePassword", "Manage", routeValues: null, htmlAttributes: new { id = "changePasswordLink" })</li>
         </ul>
     </div>
@@ -105,14 +105,13 @@
             </div>
         }
         </div>
-        <script src="scripts/backgroundChange.js"></script>
-
-
         <footer>
             <div class="the_footer2">
                 <h3>© 2016 - SocialMegazord inc.</h3>
             </div>
         </footer>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/coolchange")
 </body>
 </html>
 }
