--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/Entertainment.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/Entertainment.cshtml
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../../Content/communities.css">
     <script src="scripts/jquery-3.1.1.min.js"></script>
-    <title>Science</title>
+    <title>Entertainment</title>
 </head>
 <style>
     body {
@@ -37,10 +37,6 @@
                                         <ul>
                                             <li>@Html.ActionLink("Interests", "Interests", "Manage", new { area = "", value = "Interests" })</li>
                                             <li>@Html.ActionLink("Events", "List", "Event", routeValues: null, htmlAttributes: new { id = "eventsLink" })</li>
-<<<<<<< HEAD
-=======
-                                            <li>@Html.ActionLink("Posts", "Posts", "Post", new { area = "", value = "Post" })</li>
->>>>>>> dcfcf0f53b2ff5a5536d464fa80d2a30c0d676a2
                                         </ul>
                                     </div>
                                 </li>
@@ -66,8 +62,8 @@
             <div id="navMyProfile">
                 <ul class="navUL">
                     <li class="navLi"><a href="createnewpost.html">Create New Post</a></li>
-                    <li class="navLi">@Html.ActionLink("Create New Event", "Create","EventController", new{area="" })</li>
-                    <li class="navLi">@Html.ActionLink("Events", "Create", "Event", new {area = ""})</li>
+                    <li class="navLi">@Html.ActionLink("Create New Event", "Create","Event", new{area="" })</li>
+                    <li class="navLi">@Html.ActionLink("Events", "List", "Event", null ,new {area = ""})</li>
                 </ul>
             </div>
         }
