--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/MutualHelp.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Comunities/MutualHelp.cshtml
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../../Content/communities.css">
     <script src="scripts/jquery-3.1.1.min.js"></script>
-    <title>Science</title>
+    <title>Mutual Help</title>
 </head>
 <style>
     body {
