--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Home/Index.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Home/Index.cshtml
@@ -30,13 +30,8 @@
                                 <a id="page_settings" href="#">My profile</a>
                                 <div class="horizontal_menu">
                                     <ul>
-<<<<<<< HEAD
                                         <li>@Html.ActionLink("My Profile", "Index", "Manage", routeValues: null, htmlAttributes: new { id = "profileLink" })</li>
-                                        <li>@Html.ActionLink("Interests", "Interests", "Manage",null , new { area = "", value = "Interests" })</li>
-=======
-                                        <li>@Html.ActionLink("Interests", "Interests", "Manage", new { area = "", value = "Interests" })</li>
-                                        <li>@Html.ActionLink("Posts", "Posts", "Post", new { area = "", value = "My Videos" })</li>
->>>>>>> dcfcf0f53b2ff5a5536d464fa80d2a30c0d676a2
+                                        <li>@Html.ActionLink("Interests", "Interest", "Manage",null , new { area = "", value = "Interests" })</li>
                                         <li>@Html.ActionLink("Events", "List", "Event", routeValues: null, htmlAttributes: new { id = "eventsLink" })</li>
                                     </ul>
                                 </div>
