--- a/SocialMegazord2.0/SocialMegazord2.0/Views/User/EditEvents.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/User/EditEvents.cshtml
@@ -1,5 +1,8 @@
 ﻿@using Microsoft.AspNet.Identity;
 @model List<SocialMegazord2._0.Models.Event>
+    @{
+        ViewBag.Title = "Edit Events";
+     }
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -53,48 +56,47 @@
     </div>
     <div id="navMyProfile">
         <ul class="navUL">
-            <li class="navLi"><a href="createnewpost.html">Create New Post</a></li>
+            <li class="navLi">@Html.ActionLink("Create New Post", "Create", "Post", null, new { @area = "" })</li>
             <li class="navLi">@Html.ActionLink("Create New Event", "Create", "Event", null, new { @area = "" })</li>
         </ul>
     </div>
-    @using (Html.BeginForm("List", "Event", FormMethod.Post))
+    @using (Html.BeginForm("EditEvents", "User", FormMethod.Post))
     {
         <div class="article_containter">
-            @foreach(var item in Model)
+            @foreach (var item in Model)
             {
 
-            <article>
-                <div class="row">
-                    <h2>@item.Title</h2>
-                    <small class="author">@item.Author.Name</small>
-                    <small class="author">@item.Type</small>
-                    <small class="author">@item.Place</small>
-                    <small class="author">@item.Date</small>
-                    <div class="article_position" style="color: black">
-                        @item.AdditionalContent
+                <article>
+                    <div class="row">
+                        <h2>@item.Title</h2>
+                        <small class="author">@item.Author.Name</small>
+                        <small class="author">@item.Type</small>
+                        <small class="author">@item.Place</small>
+                        <small class="author">@item.Date</small>
+                        <div class="article_position" style="color: black">
+                            @item.AdditionalContent
+                        </div>
+                        <footer>
+                            @*<a href="eventOptions.html"><button cl
+                                <div class="article_containter">
+                                   ass="submitButtons">Options &raquo;</button></a>*@
+                            @Html.ActionLink("Options", "Options", "Event", new { @id = item.Id }, new { @type = "button", @class = "submitButtons" })
+                        </footer>
                     </div>
-                    <footer>
-                        @*<a href="eventOptions.html"><button cl
-                            <div class="article_containter">
-                               ass="submitButtons">Options &raquo;</button></a>*@
-                        @Html.ActionLink("Options", "Options", "Event", new { @id = item.Id }, new { @type = "button", @class = "submitButtons" })
-                    </footer>
-                </div>
-            </article>
+                </article>
             }
-            </div>
+        </div>
 
-            }
+    }
+    }
 
-            <footer>
-                <div class="the_footer">
-                    <h3>© 2016 - SocialMegazord inc.</h3>
-                </div>
-            </footer>
-            @Scripts.Render("~/bundles/jquery")
-            @Scripts.Render("~/bundles/coolchange")
+    <footer>
+        <div class="the_footer">
+            <h3>© 2016 - SocialMegazord inc.</h3>
+        </div>
+    </footer>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/coolchange")
 </body>
-
-
 
 </html>
