--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Event/List.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Event/List.cshtml
@@ -69,7 +69,7 @@
                     <small class="author">@item.Author.Name</small>
                     <small class="author">@item.Type</small>
                     <small class="author">@item.Place</small>
-                    <small class="author">@item.Date</small>
+                    <small class="author">@item.Date.ToShortDateString() @@ @item.Hour.TimeOfDay</small>
                     <div class="article_position" style="color: black">
                         @item.AdditionalContent
                     </div>
